# nutritions

./: .gitignore  coop.py  db_init.sql  debug_coop.py  debug_esse.py  esselunga.py  esselunga_on_console.js  export-all.sql  export.sql  pyproject.toml  test_val_extact.py  to_csv.py  uxml.py
